"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-DBItest
 url = https://cran.r-project.org/src/contrib/DBItest_1.5-2.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/rstats-db/DBItest.git
 
 [autospec]
 # build 32 bit libraries
